--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.23",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
